--- a/attention.ipynb
+++ b/attention.ipynb
@@ -583,6 +583,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n",
+      "9984\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x_query = 10000\n",
+    "batch_size = 256\n",
+    "indices = np.arange(x_query)\n",
+    "num_batch = x_query // batch_size\n",
+    "print(num_batch)\n",
+    "equal_batches = num_batch * batch_size\n",
+    "print(equal_batches)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -605,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
